--- a/configs/s5pv210_smart210_defconfig
+++ b/configs/s5pv210_smart210_defconfig
@@ -3,12 +3,14 @@ BR2_cortex_a8=y
 BR2_ARM_EABI=y
 BR2_ARM_FPU_NEON=y
 BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
+BR2_PACKAGE_GLIBC_KERNEL_COMPAT=y
 BR2_PACKAGE_GLIBC_UTILS=y
+BR2_GCC_VERSION_12_X=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_PACKAGE_HOST_GDB=y
 BR2_PACKAGE_HOST_GDB_TUI=y
-BR2_PACKAGE_HOST_GDB_PYTHON3=y
 BR2_PACKAGE_HOST_GDB_SIM=y
+BR2_GDB_VERSION_11=y
 BR2_KERNEL_MIRROR="https://mirrors.tuna.tsinghua.edu.cn/kernel"
 BR2_GNU_MIRROR="https://mirrors.tuna.tsinghua.edu.cn/gnu"
 BR2_LUAROCKS_MIRROR="https://luarocks.cn"
